#1384 fix help buttons on mobile

--- a/src/app/modules/dashboard/widgets/mobile-dashboard-widget/mobile-dashboard-widget.component.less
+++ b/src/app/modules/dashboard/widgets/mobile-dashboard-widget/mobile-dashboard-widget.component.less
@@ -18,6 +18,10 @@ nz-layout {
     display: none;
   }
 
+  .settings-btn i, .help-btn {
+    font-size: 16px;
+  }
+
   ats-widget-header-instrument-switch {
     pointer-events: none;
     .search-btn {
